force-app/main/default/objects/Player__c/fields/Character__c.field-meta.xml
<CustomField>
    <fullName>Character__c</fullName>
    <label>Character</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>p1</fullName>
                <default>true</default>
                <label>player1</label>
            </value>
            <value>
                <fullName>p2</fullName>
                <label>player2</label>
            </value>
            <value>
                <fullName>p3</fullName>
                <label>player3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>