force-app/main/default/objects/Player__c/fields/Character_Image__c.field-meta.xml
<CustomField>
    <fullName>Character_Image__c</fullName>
    <formula
  >IMAGE(&quot;/resource/remoteOfficeAssets/assets/images/characters/&quot; + TEXT( Character__c ) + &quot;.png&quot;, &quot;p1&quot;, 96, 64)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Character Image</label>
    <type>Text</type>
</CustomField>