force-app/main/default/objects/Player__c/fields/Office_Play_Config__c.field-meta.xml
<CustomField>
    <fullName>Office_Play_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office Play Config</label>
    <referenceTo>Office_Play_config__c</referenceTo>
    <relationshipLabel>Players</relationshipLabel>
    <relationshipName>Players</relationshipName>
    <type>Lookup</type>
</CustomField>