force-app/main/default/objects/Player__c/fields/Player_ID__c.field-meta.xml
<CustomField>
    <fullName>Player_ID__c</fullName>
    <externalId>true</externalId>
    <label>Player ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>