force-app/main/default/objects/Player__c/validationRules/Required_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_User</fullName>
    <active>true</active>
    <description>Checks if User if defined</description>
    <errorConditionFormula>ISBLANK(  User__c  )</errorConditionFormula>
    <errorMessage>User is required</errorMessage>
</ValidationRule>